# boulder-relay

./: Cargo.toml  README.md
.copr/: Makefile
packaging/: PKGBUILD  boulder-relay.desktop  boulder-relay.spec  boulderX.spec  build-rpm.sh  io.github.sisyphusaeolides.boulderx.metainfo.xml  org.Sisyphus.BoulderRelay.metainfo.xml  rawhide-relay.desktop  rawhide-relay.spec  setup-copr.sh
src/: app.rs  channels.rs  config.rs  main.rs  theme.rs
src/discord/: mod.rs
src/irc/: connection.rs
src/matrix/: client.rs
src/ui/: dialogs.rs  sidebar.rs
