[package]
name = "boulder-relay"
version = "0.6.0"
edition = "2021"
authors = ["SisyphusAeolides"]
description = "A fast, clean GTK4 + libadwaita IRC/Matrix client written in Rust"
homepage = "https://github.com/SisyphusAeolides/boulder-relay"
repository = "https://github.com/SisyphusAeolides/boulder-relay"
license = "GPL-2.0-or-later"
readme = "README.md"
keywords = ["irc", "matrix", "chat", "gtk4", "libadwaita"]
categories = ["network-programming", "gui"]

[dependencies]
relm4 = { version = "0.9", default-features = false, features = ["macros"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
tokio = { version = "1", features = ["full"] }
irc = "0.15"
futures = "0.3"
base64 = "0.21.7"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
matrix-sdk = { version = "0.10", features = ["e2e-encryption", "sqlite-store"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
